--- a/LuckDraw/LuckDraw.csproj
+++ b/LuckDraw/LuckDraw.csproj
@@ -75,6 +75,10 @@
     <Compile Include="View\Pages\Page_多选一.xaml.cs">
       <DependentUpon>Page_多选一.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\Windows\About.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -82,6 +86,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="View\Windows\About.xaml.cs">
+      <DependentUpon>About.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
