--- a/LuckDraw/LuckDraw.csproj
+++ b/LuckDraw/LuckDraw.csproj
@@ -72,8 +72,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="View\Pages\Page_多选一.xaml.cs">
-      <DependentUpon>Page_多选一.xaml</DependentUpon>
+    <Compile Include="View\Pages\Page_Draw1.xaml.cs">
+      <DependentUpon>Page_Draw1.xaml</DependentUpon>
     </Compile>
     <Page Include="View\Windows\About.xaml">
       <SubType>Designer</SubType>
@@ -94,7 +94,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\Pages\Page_多选一.xaml">
+    <Page Include="View\Pages\Page_Draw1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
