--- a/LuckDraw/LuckDraw.csproj
+++ b/LuckDraw/LuckDraw.csproj
@@ -52,6 +52,9 @@
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Icons\StoneAntLogo_128X128.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -136,9 +139,14 @@
     <AppDesigner Include="Properties\" />
     <None Include="Sign.pfx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Images\StoneAntLogo.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\WowLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\StoneAntLogo_128X128.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
